<resources>
    <string name="app_name">lab2_OS</string>
    <string name="C">C</string>
    <string name="equals">=</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="per">%</string>
    <string name="div">/</string>
    <string name="x">X</string>
    <string name="seven">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="two_zero">00</string>
    <string name="todo">TODO</string>
</resources>