<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="5"
    android:layout_margin="2dp"
    android:background="@color/white">

    <Button
        android:id="@+id/btn_Clear"
        android:text="@string/c"
        android:textAlignment="center"
        style="@style/FunctionalButtons"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/percentage"
        android:text="@string/per"
        android:textAlignment="center"
        style="@style/FunctionalButtons"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_Divide"
        android:text="@string/div"
        android:textAlignment="center"
        style="@style/FunctionalButtons"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_Multiply"
        android:text="@string/x"
        android:textAlignment="center"
        style="@style/FunctionalButtons"
        android:layout_column="3"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <!-- Number -->
    <Button
        android:id="@+id/btn_7"
        android:text="@string/seven"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_8"
        android:text="@string/_8"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_9"
        android:text="@string/_9"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="2"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_minus"
        android:text="@string/minus"
        android:textAlignment="center"
        style="@style/FunctionalButtons"
        android:layout_column="3"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />

    <Button
        android:id="@+id/btn_4"
        android:text="@string/_4"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />

    <Button
        android:id="@+id/btn_5"
        android:text="@string/_5"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_6"
        android:text="@string/_6"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_plus"
        android:text="@string/plus"
        android:textAlignment="center"
        style="@style/FunctionalButtons"
        android:layout_column="3"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />

    <Button
        android:id="@+id/btn_1"
        android:text="@string/_1"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_2"
        android:text="@string/_2"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_3"
        android:text="@string/_3"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="2"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />

    <Button
        android:id="@+id/btn_equals"
        android:text="@string/equals"
        style="@style/FunctionalButtons"
        android:layout_row="3"
        android:layout_rowSpan="2"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_vertical"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:textAlignment="center"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btn_dot"
        android:text="@string/dot"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_null"
        android:text="@string/zero"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />
    <Button
        android:id="@+id/btn_doubleZerro"
        android:text="@string/two_zero"
        android:textAlignment="center"
        style="@style/NumberButtons"
        android:layout_column="2"
        android:layout_row="4"
        android:layout_columnWeight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        />

</GridLayout>